documentation and variable handling improved
Squashed commit of the following:

commit c1469a61e57ba72bf38af52635ae4470b56cdc2e
Author: Thorsten M <thoto@thoto.net>
Date:   Sat Oct 29 20:16:19 2016 +0200

    default key size fixed

commit 05636af40e428ee2315e9c95720cbf71f9340c66
Author: Thorsten M <thoto@thoto.net>
Date:   Sat Oct 29 18:35:47 2016 +0200

    fixed english, thank you undermink & bt! :-)

commit ee3df0d36776e46723af1845ac330ca199dc4a1b
Author: Thorsten M <thoto@thoto.net>
Date:   Sat Oct 29 13:35:13 2016 +0200

    fixed static hostnames and variables

commit 1568bb082a2cbb2a34ae2d2060360ca3037e18a5
Author: Thorsten M <thoto@thoto.net>
Date:   Sat Oct 29 13:31:24 2016 +0200

    minor changes at readme

commit 357fbdf0011aa4ecb857a5d9e60e70815ef0221c
Author: Thorsten M <thoto@thoto.net>
Date:   Sat Oct 29 13:19:55 2016 +0200

    documentation

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,6 +19,5 @@ ipsec_conn_defaults:
     packets: 1024
     time: 1h
     comment: "64MB / 1024 packets / 1h"
-  key_size: 512
-  # ca: to be generated
 
+ipsec_default_key_size: 8192
