--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,7 +31,7 @@
 # install packages and configuration
 # ***
 - name: install packages
-  apt: name="strongswan-ikev2" state=present
+  apt: name="{{item}}" state=present
   with_items: "{{strongswan_packages}}"
 
 - name: create directory
