--- a/tasks/x509.yml
+++ b/tasks/x509.yml
@@ -1,6 +1,14 @@
 # ***
 # X.509 stuff
 # ***
+- name: fetch CA certificate
+  fetch:
+    src: /etc/ipsec.d/cacerts/{{item.file}}
+    dest: files/{{item.file}}
+    flat: yes
+  when: item.fetch_cacert | default(False)
+  delegate_to: "{{item.ca_host}}"
+
 - name: upload IPsec CA certificates
   copy: src={{item.file}} dest=/etc/ipsec.d/cacerts/{{item.file}}
   notify: reload strongswan
@@ -46,6 +54,7 @@
 
   - name: fetch X.509 CSR
     slurp: src="/etc/ipsec.d/reqs/{{item.name}}-req.der"
+    failed_when: my_base64_csr.content | length == 0
     register: my_base64_csr
 
   - name: sign X.509 certificate by CA
@@ -54,13 +63,13 @@
       {{item.ca_sign_command}} {{item.ca_sign_command_args|default('')}}
       '{{ item.id_prefix~', CN='~inventory_hostname  }}' | base64"
     delegate_to: "{{item.ca_host}}"
+    failed_when: my_sign_result.stderr | length != 0
     register: my_sign_result
 
   - name: write signed X.509 certificate to host
-    shell: echo "{{ my_sign_result.stdout }}" | base64 -d
-      > "/etc/ipsec.d/certs/{{item.name}}-cert.der"
-    args:
-      creates: "/etc/ipsec.d/certs/{{item.name}}-cert.der"
+    shell: ( echo "{{ my_sign_result.stdout }}" | base64 -d
+      > "/etc/ipsec.d/certs/{{item.name}}-cert.der" ) &&
+      test -s "/etc/ipsec.d/certs/{{item.name}}-cert.der"
     notify: reload strongswan
 
-  when: my_cert.stat.exists != true
+  when: my_cert.stat.exists != true or my_cert.stat.size == 0
